<resources>
    <string name="app_name">PokeDex</string>

    <string name="label_pokemon_details_name">Name :</string>
    <string name="label_pokemon_details_weight">Weight :</string>
    <string name="label_pokemon_details_baseexp">Base Exp :</string>
    <string name="label_pokemon_details_type">Type :</string>
    <string name="label_pokemon_details_stats">Stats :</string>
    <string name="label_pokemon_details_abilities">Abilities :</string>
    <string name="label_pokemon_details_moves">Moves :</string>

    <string name="label_best_pokemon_list">Best Caught Pokemons: </string>
    <string name="label_best_pokemon_stats_sum">Stats Sum: </string>
    <string name="label_best_pokemon_weight_sum">Weight Sum: </string>
    <string name="label_best_pokemon_baseexp_sum">Base Exp Sum: </string>
    <string name="dummy_pokemon_name">Loading...</string>

    <string name="refresh_pokemon_details_error">Error while refreshing Pokemon list !</string>
    <string name="no_internet_connection_error_message">Internet is not available !</string>
    <string name="max_caught_pokemon">Max of 6 Pokemon caught already !</string>
</resources>
