<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pokedex_details_page_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_pokemon_details_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="135dp"
        android:background="@drawable/dark_green_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loading_pokeball_08" />

    <TextView
        android:id="@+id/tv_pokemon_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/dark_green_border"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_label_pokemon_name"
        app:layout_constraintTop_toTopOf="@+id/tv_label_pokemon_name"
        tools:text="Bulbassaur" />

    <TextView
        android:id="@+id/tv_label_pokemon_name"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="134dp"
        android:background="@drawable/dark_green_border"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        android:text="@string/label_pokemon_details_name"
        app:layout_constraintStart_toEndOf="@+id/im_pokemon_details_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name:" />

    <TextView
        android:id="@+id/tv_label_pokemon_weight"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_label_pokemon_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_pokemon_name"
        tools:text="Weight :"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/label_pokemon_details_weight"
        android:background="@drawable/dark_green_border"/>

    <TextView
        android:id="@+id/tv_pokemon_weight"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/dark_green_border"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        app:layout_constraintStart_toStartOf="@+id/tv_pokemon_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_name"
        tools:text="90Kg" />


    <ImageView
        android:id="@+id/im_pokemon_weight"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_weight"
        app:layout_constraintStart_toEndOf="@+id/tv_pokemon_weight"
        app:layout_constraintTop_toTopOf="@+id/tv_pokemon_weight"
        app:srcCompat="@drawable/weight_icon" />

    <TextView
        android:id="@+id/tv_label_pokemon_baseexp"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_label_pokemon_weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_pokemon_weight"
        tools:text="Base Exp:"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/label_pokemon_details_baseexp"
        android:background="@drawable/dark_green_border"/>

    <TextView
        android:id="@+id/tv_pokemon_baseexp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/dark_green_border"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_pokemon_name"
        app:layout_constraintStart_toStartOf="@+id/tv_pokemon_weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_weight"
        tools:text="Base Exp" />

    <TextView
        android:id="@+id/tv_label_pokemon_type"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_label_pokemon_baseexp"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_pokemon_baseexp"
        tools:text="Type :"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/label_pokemon_details_type"
        android:background="@drawable/dark_green_border"/>

    <TextView
        android:id="@+id/tv_pokemon_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_pokemon_baseexp"
        app:layout_constraintStart_toStartOf="@+id/tv_pokemon_baseexp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_baseexp"
        tools:text="Poison"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:background="@drawable/dark_green_border"/>

    <TextView
        android:id="@+id/tv_label_pokemon_stats"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/dark_green_border"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:text="@string/label_pokemon_details_stats"
        app:layout_constraintStart_toStartOf="@+id/im_pokemon_details_image"
        app:layout_constraintTop_toBottomOf="@+id/im_pokemon_details_image"
        tools:text="@string/label_pokemon_details_stats" />

    <TextView
        android:id="@+id/tv_pokemon_stats"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/dark_green_border"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_label_pokemon_stats"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_pokemon_stats"
        android:nestedScrollingEnabled="true"
        tools:text="Strike..." />

    <TextView
        android:id="@+id/tv_label_pokemon_abilities"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_pokemon_stats"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_stats"
        tools:text="@string/label_pokemon_details_abilities"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:text="@string/label_pokemon_details_abilities"
        android:background="@drawable/dark_green_border"/>

    <TextView
        android:id="@+id/tv_pokemon_abilities"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/dark_green_border"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_pokemon_stats"
        app:layout_constraintStart_toStartOf="@+id/tv_label_pokemon_abilities"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_pokemon_abilities"
        tools:text="abilities..." />

    <TextView
        android:id="@+id/tv_label_pokemon_moves"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_pokemon_abilities"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_abilities"
        tools:text="@string/label_pokemon_details_moves"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:text="@string/label_pokemon_details_moves"
        android:background="@drawable/dark_green_border"/>

    <TextView
        android:id="@+id/tv_pokemon_moves"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/dark_green_border"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_pokemon_abilities"
        app:layout_constraintStart_toStartOf="@+id/tv_label_pokemon_moves"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_pokemon_moves"
        tools:text="moves..." />


</android.support.constraint.ConstraintLayout>